Fixed LangChain import and dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
 uvicorn
-google-generativeai
+python-dotenv
 openai
+google-generativeai
 requests
 langchain
-python-dotenv
+langchain-community
