--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.20.1",
+    "postcss": "^8.5.2",
     "typescript": "^5.7.3"
   }
 }
