--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^19.0.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8.5.2",
     "typescript": "^5.7.3"
   }
