--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,102 @@
-fastapi
-uvicorn
-python-dotenv
-openai
-google-generativeai
-requests
-langchain
-langchain-community
-langchain-openai
-transformers
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+asgiref==3.8.1
+attrs==25.1.0
+beautifulsoup4==4.13.3
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+dataclasses-json==0.6.7
+distro==1.9.0
+Django==5.1.6
+django-googlesearch==0.2
+fastapi==0.115.8
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2025.2.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.67.0
+googlesearch-python==1.3.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.28.1
+idna==3.10
+Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.18
+langchain-community==0.3.17
+langchain-core==0.3.35
+langchain-openai==0.3.5
+langchain-text-splitters==0.3.6
+langsmith==0.3.8
+load-dotenv==0.1.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.3
+openai==1.63.0
+orjson==3.10.15
+packaging==24.2
+pillow==11.1.0
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+pyparsing==3.2.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.4.1
+setuptools==75.8.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.38
+sqlparse==0.5.3
+starlette==0.45.3
+sympy==1.13.1
+tenacity==9.0.0
+textblob==0.19.0
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tokenizers==0.21.0
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.48.3
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+yarl==1.18.3
+zstandard==0.23.0
