--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/material": "latest",
     "axios": "latest",
     "framer-motion": "latest",
     "next": "latest",
     "react": "latest",
+    "react-circular-progressbar": "latest",
     "react-dom": "latest",
-    "react-icons": "latest",
-    "tailwindcss": "latest"
+    "react-icons": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4",
-    "@types/react": "^19.0.8",
+    "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "^15.1.7",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
     "postcss": "^8.5.2",
-    "typescript": "^5.7.3"
-  },
-  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
-  "main": "next.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "tailwindcss": "^4.0.6"
+  }
 }
